Version: 1.6.0 - Performance improvements
Date: 17. 02. 2023
  Minor Features:
    - There is now a startup option for dynamic recipe selection.  That should make this mod compatible with all mods that add new inserters.
  Optimizations:
    - Improved performance.  Should also make this mod multiplayer compatible.
---------------------------------------------------------------------------------------------------
Version: 1.5.1 - Factorio version 1.1
Date: 18. 12. 2020
  Changes:
    - Updated for Factorio version 1.1.
---------------------------------------------------------------------------------------------------
Version: 1.5.0 - Factorio version 0.18
Date: 09. 06. 2020
  Changes:
    - Updated for Factorio version 0.18.
---------------------------------------------------------------------------------------------------
Version: 1.4.0 - Factorio version 0.17
Date: 02. 03. 2019
  Changes:
    - Updated for Factorio version 0.17.
    - Added a changelog.  The dates may not be correct (they are estimates) but most other information is reasonably accurate.
    - Added a thumbnail picture.
  Optimizations:
    - Improved script performance a little bit more.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 01. 06. 2018
  Optimizations:
    - Improved script performance.
---------------------------------------------------------------------------------------------------
Version: 1.3.1 - Factorio version 0.16
Date: 01. 01. 2018
  Changes:
    - Updated for Factorio version 0.16.
---------------------------------------------------------------------------------------------------
Version: 1.2.1
Date: 01. 09. 2017
  Bugfixing:
    - Fixed startup error if playing without bobmods.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 21. 07. 2017
  Bugfixing:
    - Fixed Inserter Module limitation getting changed by bobmodules mod.